update swagger docs and tags
